--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       
           <!-- Date & Time Card -->
           <div class="grid-item pink-card">
-            <div class="icon">&#128197;</div>
+            <div class="icon">🗓️</div>
             <h2>Date & Time</h3>
             <p class="main">May 17, 2025</p> 
             <p class="main">11:00 AM onwards</p>
